[gd_scene load_steps=6 format=3 uid="uid://bt8qg73a18857"]

[ext_resource type="Script" path="res://escenas/bateria/scripts/bateria.gd" id="1_d1srh"]
[ext_resource type="Theme" uid="uid://henkgcdrik3h" path="res://new_theme.tres" id="2_ngbpm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3q6np"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6orlj"]
bg_color = Color(0.0938842, 0.24105, 0.188112, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ef8b5"]
bg_color = Color(0.183682, 0.95052, 0.689145, 1)

[node name="PanelContainer" type="PanelContainer"]
custom_minimum_size = Vector2(100, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -38.5
offset_top = -309.0
offset_right = 38.5
offset_bottom = 309.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d1srh")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 10

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3q6np")

[node name="ColorRect" type="ColorRect" parent="MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
color = Color(0.239216, 0.239216, 0.239216, 1)

[node name="CheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
disabled = true

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "BATERIA"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CheckButton" type="CheckButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_ngbpm")
disabled = true
text = "off"
flat = true

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_6orlj")
theme_override_styles/fill = SubResource("StyleBoxFlat_ef8b5")
fill_mode = 3
show_percentage = false

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "energia"

[node name="Label_Energia_Inicial" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "0"
horizontal_alignment = 1

[node name="Label_Energia_Bateria" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "0"
horizontal_alignment = 1

[node name="Label_Descarga_Bateria" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.960784, 0, 0, 1)
text = "0"
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="MarginContainer/VBoxContainer"]

[connection signal="pressed" from="MarginContainer/VBoxContainer/PanelContainer/CheckBox" to="." method="_on_check_box_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CheckButton" to="." method="_on_check_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="MarginContainer/VBoxContainer/Timer" to="." method="_on_timer_timeout"]
